# llm_judge_chat

./: .env.example  README.md  pyproject.toml
src/llm_judge_chat/: __init__.py  config.py  context.py  dpo_prep.py  generator.py  judge.py  logging_io.py  memory.py  openai_compat.py  schemas.py  selector.py  utils.py
src/ui/: app.py  components.py  styles.css
tests/: test_config_env.py  test_rubric.py  test_selection.py
