[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-judge-chat"
version = "0.1.0"
description = "Local multi-candidate LLM chat with judging and Streamlit UI"
authors = [{name = "OpenAI", email = "opensource@openai.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30",
    "pydantic>=1.10,<2",
    "httpx>=0.25",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "tiktoken>=0.5",
    "uvicorn>=0.24",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
